# audiosnoopy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  wheels.yml
_skbuild/linux-x86_64-3.12/cmake-build/: .ninja_deps  .ninja_log  CMakeSpec.json  build.ninja
_skbuild/linux-x86_64-3.12/cmake-build/JUCE/: JUCEConfig.cmake  JUCEExportConfig.cmake
_skbuild/linux-x86_64-3.12/cmake-build/JUCE/tools/: .ninja_deps  .ninja_log  JUCEConfig.cmake  JUCEConfigVersion.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake  build.ninja
audiosnoopy/: AudioSnoopy.cpp  AudioSnoopyPy.cpp  __init__.py
pybind11/: setup.py
pybind11/pybind11/: __init__.py  _version.py  setup_helpers.py
pybind11/tests/: conftest.py  test_async.py  test_buffers.py  test_builtin_casters.py  test_call_policies.py  test_callbacks.py  test_chrono.py  test_class.py  test_const_name.py  test_copy_move.py  test_custom_type_casters.py  test_custom_type_setup.py  test_eigen_matrix.py  test_enum.py  test_eval.py  test_exceptions.py  test_factory_constructors.py  test_gil_scoped.py  test_kwargs_and_defaults.py  test_local_bindings.py  test_methods_and_attributes.py  test_modules.py  test_multiple_inheritance.py  test_numpy_array.py  test_numpy_dtypes.py  test_numpy_vectorize.py  test_opaque_types.py  test_operator_overloading.py  test_pickling.py  test_pytypes.py  test_sequences_and_iterators.py  test_smart_ptr.py  test_stl.py  test_stl_binders.py  test_type_caster_pyobject_ptr.py  test_unnamed_namespace_a.py  test_vector_unique_ptr_member.py  test_virtual_functions.py
pybind11/tools/: codespell_ignore_lines_from_errors.py  setup_global.py.in
src/: AudioSnoopy.cpp  AudioSnoopy.h  __init__.py  __main__.py  _audiosnoopy.cpp
tests/: test_audiosnoopy.py
